--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "autoprefixer": "10.4.19",
     "axios": "^1.13.4",
+    "framer-motion": "^12.33.0",
     "postcss": "8.4.38",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
